<resources>
    <!-- App name -->
    <string name="app_name">Flag Quiz App</string>

    <!-- Flag image content description -->
    <string name="flag_image">Flag Image</string>

    <!-- Result text -->
    <string name="result">Result</string>

    <string name="splash_subtitle">Test your knowledge of world flags!</string>

    <string-array name="flag_names">
        <item>flag_albania</item>
        <item>flag_algeria</item>
        <item>flag_american_samoa</item>
        <item>flag_andorra</item>
        <item>flag_angola</item>
        <item>flag_anguilla</item>
        <item>flag_antarctica</item>
        <item>flag_antigua_and_barbuda</item>
        <item>flag_argentina</item>
        <item>flag_armenia</item>
        <item>flag_aruba</item>
        <item>flag_australia</item>
        <item>flag_austria</item>
        <item>flag_azerbaijan</item>
        <item>flag_bahamas</item>
        <item>flag_bahrain</item>
        <item>flag_bangladesh</item>
        <item>flag_barbados</item>
        <item>flag_belarus</item>
        <item>flag_belgium</item>
        <item>flag_belize</item>
        <item>flag_benin</item>
        <item>flag_bermuda</item>
        <item>flag_bhutan</item>
        <item>flag_bolivia</item>
        <item>flag_bosnia_and_herzegovina</item>
        <item>flag_botswana</item>
        <item>flag_bouvet_island</item>
        <item>flag_brazil</item>
        <item>flag_british_indian_ocean_territory</item>
        <item>flag_british_virgin_islands</item>
        <item>flag_brunei</item>
        <item>flag_bulgaria</item>
        <item>flag_burkina_faso</item>
        <item>flag_burundi</item>
        <item>flag_cambodia</item>
        <item>flag_cameroon</item>
        <item>flag_canada</item>
        <item>flag_cape_verde</item>
        <item>flag_caribbean_netherlands</item>
        <item>flag_cayman_islands</item>
        <item>flag_central_african_republic</item>
        <item>flag_chad</item>
        <item>flag_chile</item>
        <item>flag_china</item>
        <item>flag_christmas_island</item>
        <item>flag_cocos__keeling__islands</item>
        <item>flag_colombia</item>
        <item>flag_comoros</item>
        <item>flag_cook_islands</item>
        <item>flag_costa_rica</item>
        <item>flag_croatia</item>
        <item>flag_cuba</item>
        <item>flag_curacao</item>
        <item>flag_cyprus</item>
        <item>flag_czechia</item>
        <item>flag_denmark</item>
        <item>flag_djibouti</item>
        <item>flag_dominica</item>
        <item>flag_dominican_republic</item>
        <item>flag_dr_congo</item>
        <item>flag_ecuador</item>
        <item>flag_egypt</item>
        <item>flag_el_salvador</item>
        <item>flag_equatorial_guinea</item>
        <item>flag_eritrea</item>
        <item>flag_estonia</item>
        <item>flag_eswatini</item>
        <item>flag_ethiopia</item>
        <item>flag_falkland_islands</item>
        <item>flag_faroe_islands</item>
        <item>flag_fiji</item>
        <item>flag_finland</item>
        <item>flag_france</item>
        <item>flag_french_guiana</item>
        <item>flag_french_polynesia</item>
        <item>flag_french_southern_and_antarctic_lands</item>
        <item>flag_gabon</item>
        <item>flag_gambia</item>
        <item>flag_georgia</item>
        <item>flag_germany</item>
        <item>flag_ghana</item>
        <item>flag_gibraltar</item>
        <item>flag_greece</item>
        <item>flag_greenland</item>
        <item>flag_grenada</item>
        <item>flag_guadeloupe</item>
        <item>flag_guam</item>
        <item>flag_guatemala</item>
        <item>flag_guernsey</item>
        <item>flag_guinea</item>
        <item>flag_guinea_bissau</item>
        <item>flag_guyana</item>
        <item>flag_haiti</item>
        <item>flag_heard_island_and_mcdonald_islands</item>
        <item>flag_honduras</item>
        <item>flag_hong_kong</item>
        <item>flag_hungary</item>
        <item>flag_iceland</item>
        <item>flag_india</item>
        <item>flag_indonesia</item>
        <item>flag_iran</item>
        <item>flag_iraq</item>
        <item>flag_ireland</item>
        <item>flag_isle_of_man</item>
        <item>flag_israel</item>
        <item>flag_italy</item>
        <item>flag_ivory_coast</item>
        <item>flag_jamaica</item>
        <item>flag_japan</item>
        <item>flag_jersey</item>
        <item>flag_jordan</item>
        <item>flag_kazakhstan</item>
        <item>flag_kenya</item>
        <item>flag_kiribati</item>
        <item>flag_kosovo</item>
        <item>flag_kuwait</item>
        <item>flag_kyrgyzstan</item>
        <item>flag_land_islands</item>
        <item>flag_laos</item>
        <item>flag_latvia</item>
        <item>flag_lebanon</item>
        <item>flag_lesotho</item>
        <item>flag_liberia</item>
        <item>flag_libya</item>
        <item>flag_liechtenstein</item>
        <item>flag_lithuania</item>
        <item>flag_luxembourg</item>
        <item>flag_macau</item>
        <item>flag_madagascar</item>
        <item>flag_malawi</item>
        <item>flag_malaysia</item>
        <item>flag_maldives</item>
        <item>flag_mali</item>
        <item>flag_malta</item>
        <item>flag_marshall_islands</item>
        <item>flag_martinique</item>
        <item>flag_mauritania</item>
        <item>flag_mauritius</item>
        <item>flag_mayotte</item>
        <item>flag_mexico</item>
        <item>flag_micronesia</item>
        <item>flag_moldova</item>
        <item>flag_monaco</item>
        <item>flag_mongolia</item>
        <item>flag_montenegro</item>
        <item>flag_montserrat</item>
        <item>flag_morocco</item>
        <item>flag_mozambique</item>
        <item>flag_myanmar</item>
        <item>flag_namibia</item>
        <item>flag_nauru</item>
        <item>flag_nepal</item>
        <item>flag_netherlands</item>
        <item>flag_new_caledonia</item>
        <item>flag_new_zealand</item>
        <item>flag_nicaragua</item>
        <item>flag_niger</item>
        <item>flag_nigeria</item>
        <item>flag_niue</item>
        <item>flag_norfolk_island</item>
        <item>flag_north_korea</item>
        <item>flag_north_macedonia</item>
        <item>flag_northern_mariana_islands</item>
        <item>flag_norway</item>
        <item>flag_oman</item>
        <item>flag_pakistan</item>
        <item>flag_palau</item>
        <item>flag_palestine</item>
        <item>flag_panama</item>
        <item>flag_papua_new_guinea</item>
        <item>flag_paraguay</item>
        <item>flag_peru</item>
        <item>flag_philippines</item>
        <item>flag_pitcairn_islands</item>
        <item>flag_poland</item>
        <item>flag_portugal</item>
        <item>flag_puerto_rico</item>
        <item>flag_qatar</item>
        <item>flag_reunion</item>
        <item>flag_romania</item>
        <item>flag_russia</item>
        <item>flag_rwanda</item>
        <item>flag_saint_barthelemy</item>
        <item>flag_saint_helena_ascension_and_tristan_da_cunha</item>
        <item>flag_saint_kitts_and_nevis</item>
        <item>flag_saint_lucia</item>
        <item>flag_saint_martin</item>
        <item>flag_saint_pierre_and_miquelon</item>
        <item>flag_saint_vincent_and_the_grenadines</item>
        <item>flag_samoa</item>
        <item>flag_san_marino</item>
        <item>flag_sao_tome_and_principe</item>
        <item>flag_saudi_arabia</item>
        <item>flag_senegal</item>
        <item>flag_serbia</item>
        <item>flag_seychelles</item>
        <item>flag_sierra_leone</item>
        <item>flag_singapore</item>
        <item>flag_sint_maarten</item>
        <item>flag_slovakia</item>
        <item>flag_slovenia</item>
        <item>flag_solomon_islands</item>
        <item>flag_somalia</item>
        <item>flag_south_africa</item>
        <item>flag_south_georgia</item>
        <item>flag_south_korea</item>
        <item>flag_south_sudan</item>
        <item>flag_spain</item>
        <item>flag_sri_lanka</item>
        <item>flag_sudan</item>
        <item>flag_suriname</item>
        <item>flag_svalbard_and_jan_mayen</item>
        <item>flag_sweden</item>
        <item>flag_switzerland</item>
        <item>flag_syria</item>
        <item>flag_taiwan</item>
        <item>flag_tajikistan</item>
        <item>flag_tanzania</item>
        <item>flag_thailand</item>
        <item>flag_timor_leste</item>
        <item>flag_togo</item>
        <item>flag_tokelau</item>
        <item>flag_tonga</item>
        <item>flag_trinidad_and_tobago</item>
        <item>flag_tunisia</item>
        <item>flag_turkey</item>
        <item>flag_turkmenistan</item>
        <item>flag_turks_and_caicos_islands</item>
        <item>flag_tuvalu</item>
        <item>flag_uganda</item>
        <item>flag_ukraine</item>
        <item>flag_united_arab_emirates</item>
        <item>flag_united_kingdom</item>
        <item>flag_united_states</item>
        <item>flag_united_states_minor_outlying_islands</item>
        <item>flag_united_states_virgin_islands</item>
        <item>flag_uruguay</item>
        <item>flag_uzbekistan</item>
        <item>flag_vanuatu</item>
        <item>flag_vatican_city</item>
        <item>flag_venezuela</item>
        <item>flag_vietnam</item>
        <item>flag_wallis_and_futuna</item>
        <item>flag_western_sahara</item>
        <item>flag_yemen</item>
        <item>flag_zambia</item>
        <item>flag_zimbabwe</item>
    </string-array>

    <string name="correct_answer">Correct! Score: %1$d/%2$d</string>
    <string name="wrong_answer">Wrong! The correct answer is %1$s</string>
    <string name="game_complete_title">Game Complete!</string>
    <string name="game_complete_message">Your final score: %1$d out of %2$d\n\nWould you like to play again?</string>
    <string name="play_again">Play Again</string>
    <string name="exit">Exit</string>
    <string name="test_your_knowledge_of_world_flags">Test your knowledge of world flags!</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="start_full_quiz">Start Full Quiz</string>
    <string name="start_quick_quiz">Quick Quiz (10 Flags)</string>
    <string name="final_score">Final Score: %1$d out of %2$d</string>
    <string name="best_score">Best Score: %1$d out of %2$d</string>
</resources>